k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudnative-api-service
  namespace: default
spec:
  selector:
    app: cloudnative-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: LoadBalancer
